(user): adds pagination to FindAll route
